2010-07-04  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-redisplay-status-on-buffer): Fix
	the condition of redisplaying a timeline.

	* twittering-mode.el: If it fails to retrieve an image a certain
	times, retry no longer.
	(twittering-create-image-pair): return
	`twittering-error-icon-data-pair' if the argument `image-data' is
	nil.
	(twittering-make-icon-string): fix the condition of
	`image-data'. If it is an integer, it means the time of retries.

	* twittering-mode.el: Use icon images scaled by API if possible.
	(twittering-generate-format-table): generate the URL of the scaled
	icon image by API.

	* twittering-mode.el: Use `GET users/profile_image' API only if
	the variable `twittering-use-profile-image-api' is non-nil. Since
	the API is rate limited, it may cause troubles on other API calls.
	(twittering-use-profile-image-api): new variable.
	(twittering-generate-format-table): call `GET users/profile_imagne'
	API only if `twittering-use-profile-image-api' is non-nil.

2010-07-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Replace `xml-parse-region' with
	`twittering-xml-parse-region' in order to prevent abnormal exit
	caused by decoding unknown numeric character references.
	(twittering-unicode-replacement-char): new variable.
	(twittering-ucs-to-char): return
	`twittering-unicode-replacement-char' if decoding failed.
	(decode-char): new advice in order to return
	`twittering-unicode-replacement-char' for unknown code-points.
	(twittering-xml-parse-region): new function. This function does
	not exit abnormally even if given XML includes unknown numeric
	references. Unknown numeric references are replaced with
	`twittering-unicode-replacement-char'.
	(twittering-get-error-message): replace `xml-parse-region' with
	`twittering-xml-parse-region'.
	(twittering-http-get-list-index-sentinel): likewise.
	(twittering-get-status-from-http-response): likewise.

2010-07-02  Tadashi MATSUO  <tad@mymail.twin.jp>
